--- a/LISTAS.ipynb
+++ b/LISTAS.ipynb
@@ -205,10 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe8a54e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Angela', 'Victoria', 'Sandra', 'Octavia']\n"
+     ]
+    }
+   ],
    "source": [
     "lista=[\"Angela\", \"Victoria\", \"Sandra\", \"Mariel\", \"Octavia\"]\n",
     "lista.pop(3) #Quita el elemento del indice\n",
@@ -225,10 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "91c0401d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sandia', 'Melon', 'Pera', 'Uva', 'Manzana']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits=[\"Sandia\", \"Melon\", \"Manzana\", \"Pera\", \"Uva\", \"Manzana\"]\n",
     "fruits.remove(\"Manzana\")\n",
